test/trivial/bradc/initvarsamename2.good
initvarsamename2.chpl:1: In function 'foo':
initvarsamename2.chpl:2: error: 'x' used before defined (first used here)
